--- a/syncer-java/pom.xml
+++ b/syncer-java/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.github.xlucasdemelo</groupId>
+	<groupId>br.com.eits.syncer</groupId>
 	<artifactId>eits-syncer-java</artifactId>
-	<version>0.0.7-SNAPSHOT</version>
+	<version>0.0.6-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
