--- a/syncer-android/build.gradle
+++ b/syncer-android/build.gradle
@@ -1,19 +1,59 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-        mavenCentral()
-        mavenLocal()
+apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'maven-publish'
+
+//project.archivesBaseName = 'eits-syncer-android'
+
+android {
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
+
+    defaultConfig {
+        minSdkVersion 21
+        targetSdkVersion 21
+        consumerProguardFiles 'proguard-rules.pro'
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+}
+
+def feignVersion = '9.3.1'
+
+dependencies {
+    compile project(':syncer-java')
+    compile 'io.requery:sqlite-android:3.15.1'
+    compile 'io.github.openfeign:feign-core:'+feignVersion
+    compile 'io.github.openfeign:feign-jackson:'+feignVersion
+    compile ('io.github.openfeign:feign-jaxrs:'+feignVersion) {
+        exclude module: 'jsr311-api'//conflit with android dependencies
+    }
+}
+
+// build a jar with source files
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+artifacts {
+    archives sourcesJar
 }
