--- a/syncer-android/src/main/AndroidManifest.xml
+++ b/syncer-android/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
 
         //optional: sync service with basic credentials
         <meta-data android:name="sync-basic-credentials"
-                   android:value="admin:pass"/>
+            android:value="admin:pass"/>
 
         //mandatory: sync service urls
         <meta-data android:name="sync-urls"
-                   android:value="{'default':'http://host1.com', 'service2':'http://host2.com'}"/>
+            android:value='{"default":"http://host1.com", "service2":"http://host2.com"}'/>
     </service>
     -->
 
