--- a/syncer-java/build.gradle
+++ b/syncer-java/build.gradle
@@ -6,8 +6,8 @@ targetCompatibility = 1.7
 
 dependencies {
     compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.4'
-    compile 'org.hibernate:hibernate-core:5.0.12.Final'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.6.0'
+    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.0.Final'
     compile 'org.hibernate:hibernate-validator:5.3.4.Final'
 }
 
