--- a/syncer-android/src/main/AndroidManifest.xml
+++ b/syncer-android/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     package="br.com.eits.syncer">
 
     <!-- Sample Services
-    <service android:process=":sync"
-             android:permission="android.permission.BIND_JOB_SERVICE"
+    <service android:permission="android.permission.BIND_JOB_SERVICE"
              android:name="br.com.eits.syncer.application.background.SyncBackgroundService">
 
         //optional: sync service with basic credentials
