--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 02 17:29:46 BRT 2017
-sdk.dir=/Users/rodrigo.p.fraga/Library/Android/sdk
+#Thu Oct 05 13:54:16 BRT 2017
+sdk.dir=/home/victor/Android/Sdk
