Bugfix for JobInfo not executing and task was stopping

--- a/build.gradle
+++ b/build.gradle
@@ -6,5 +6,11 @@ allprojects {
         jcenter()
         mavenCentral()
         mavenLocal()
+        google()
+    }
+}
+buildscript {
+    repositories {
+        google()
     }
 }
