--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 27 14:35:36 BRST 2017
-sdk.dir=/Users/eduardo/Library/Android/sdk
+#Tue Mar 20 16:35:50 BRT 2018
+sdk.dir=/home/eduardo/Android/Sdk
