--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 allprojects {
-	version = "0.0.18-SNAPSHOT"
+	version = "0.0.19-ERNEX-SNAPSHOT"
     group = 'com.github.eitsopensource'
 
     repositories {
